--- a/device/milkv-duo-sd/genimage.cfg
+++ b/device/milkv-duo-sd/genimage.cfg
@@ -28,6 +28,11 @@ image milkv-duo-sd.img {
 
 	partition rootfs {
 		partition-type = 0x83
-		image = "rootfs.ext4"
+		image = "rootfs.squashfs"
+	}
+
+	partition overlay {
+		partition-type = 0x83
+		size = 8000M
 	}
 }
